Implement validations (#50)